--- a/catalog.html
+++ b/catalog.html
@@ -98,8 +98,8 @@
     	<h1 class="page-title">Перфораторы</h1>
 
     	<form action="/" method="post" class="catalog-filter">
-    		<h2 class="catalog-filter_title">Фильтр</h2>
-    		<!-- раздел с ценой -->
+    		<h2 class="catalog-filter_title">Фильтр:</h2>
+    		<h3 class="catalog-filter_section-title">Цена:</h3>
     		<h3 class="catalog-filter_section-title">Производители:</h3>
     		<label>
                 <input type="checkbox" name="check-option1" checked>Bosch
@@ -126,10 +126,16 @@
     		<button type="submit">Показать</button>
     	</form>
 
-    	<div class="catalog-sort"><!-- soon --></div>
-
     	<section class="catalog">
     		<h2 class="visually-hidden">Список товаров</h2>
+            <div class="catalog-sort">
+                <span>Сортировка:</span>
+                <a href="#" title="По цене">По цене</a>
+                <a href="#" title="По типу">По типу</a>
+                <a href="#" title="По функционалу">По функционалу</a>
+                <a href="#" title="По возрастанию"><img src="icon-up-dir.svg"></a>
+                <a href="#" title="По убыванию"><img src="icon-down-dir.svg"></a>
+            </div>
     		<ul class="catalog-list">
     			<li class="catalog-item">
     				<p class="catalog-item-title">
@@ -145,8 +151,8 @@
                         <a href="catalog-item.html" title="15500 P.">15500 P.</a>
                     </p>
                     <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                     </div>
     			</li>
      			<li class="catalog-item">
@@ -162,8 +168,8 @@
                         <a href="catalog-item.html" title="25500 P.">25500 P.</a>
                     </p>
                     <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                     </div>
      			</li>
      			<li class="catalog-item">
@@ -179,9 +185,10 @@
                         <a href="catalog-item.html" title="12500 P.">12500 P.</a>
                     </p>
                     <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                     </div>
+                    <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -197,8 +204,8 @@
                         <a href="catalog-item.html" title="15500 P.">15500 P.</a>
                     </p>
                     <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                     </div>
      			</li>
      			<li class="catalog-item">
@@ -215,9 +222,10 @@
                         <a href="catalog-item.html" title="25500 P.">25500 P.</a>
                     </p>
                     <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                     </div>
+                    <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -232,8 +240,8 @@
                         <a href="catalog-item.html" title="12500 P.">12500 P.</a>
                     </p>
                     <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                     </div>
      			</li>
      			<li class="catalog-item">
@@ -250,9 +258,10 @@
                         <a href="catalog-item.html" title="15500 P.">15500 P.</a>
                     </p>
                     <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                     </div>
+                    <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
      			</li>
      			<li class="catalog-item">
      				<p class="catalog-item-title">
@@ -268,8 +277,8 @@
                         <a href="catalog-item.html" title="25500 P.">25500 P.</a>
                     </p>
                     <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                     </div>
      			</li>
      			<li class="catalog-item">
@@ -285,15 +294,23 @@
                         <a href="catalog-item.html" title="12500 P.">12500 P.</a>
                     </p>
                     <div class="catalog-user-form-hidden">
-                      <a class="catalog-user-form-button" src="#" title="Купить">Купить</a>
-                      <a class="catalog-user-form-button" src="#" title="В закладки">В закладки</a>
+                      <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                      <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
                     </div>
      			</li>
     		</ul>
-            <div class="catalog-new-flag">
-                <img src="img/new-flag.svg" width="20" height="20" alt="Новый товар">
-            </div>
+            <ul class="catalog-pagination-list">
+                <li class="atalog-pagination-item pagination-item-current"><a>1</a></li>
+                <li class="atalog-pagination-item"><a href="#">2</a></li>
+                <li class="atalog-pagination-item"><a href="#">3</a></li>
+                <li class="atalog-pagination-item"><a href="#">Следующая</a></li>
+            </ul>
     	</section>
+        <article class="main_perforator-article">
+            <h2 class="main_perforator-article-title">ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+            <p class="main_perforator-article-text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+        </article>
     </main>
 
     <footer class="main-footer">
@@ -325,7 +342,7 @@
                   <a href="materials.html" title="Материалы">Материалы</a>
                </li>
                <li>
-                  <a href="technics.html" title="Техника">Техника</a>
+                  <a href="machinery.html" title="Техника">Техника</a>
                </li>
                <li>
                   <a href="tools.html" title="Инструмент">Инструмент</a>
@@ -354,7 +371,7 @@
                  <a class="footer-bottom_academy-link" href="send-mail.html" title="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </div>
     		<div class="footer-bottom_academy">Разработано: 
-                <a class="footer-bottom_academy-link" href="https://htmlacademy.ru" title="htmlacademy.ru">htmlacademy.ru</a>
+                <a class="footer-bottom_academy-link" href="https://htmlacademy.ru" title="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
             </div>
     	</div>
     </footer>
