--- a/index.html
+++ b/index.html
@@ -64,7 +64,192 @@
     </header>
 
     <main>
-    	<!-- to be continued -->
+      <div class="main_products-menu">
+          <div class="main_products-menu_materials">
+              <h3 class="main_products-menu_materials-title">Материалы</h3>
+              <img src="img/icon-1.svg" width="44" height="65" alt="Материалы">
+              <a class="main_products-menu_button" href="materials.html" title="Материалы">На любой вкус</a>
+              <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
+          </div>
+          <div class="main_products-menu_tools">
+              <h3 class="main_products-menu_tools-title">Инструмент</h3>
+              <img src="img/icon-2.svg" width="75" height="61" alt="Инструмент">
+              <a class="main_products-menu_button" href="tools.html" title="Инструмент">На все случаи</a>
+          </div>
+          <div class="main_products-menu_machinery">
+              <h3 class="main_products-menu_machinery-title">Техника</h3>
+              <img src="img/icon-3.svg" width="78" height="62" alt="Техника">
+              <a class="main_products-menu_button" href="machinery.html" title="Техника">Для стройки</a>
+          </div>
+          <div class="main_products-menu_sales">
+              <h3 class="main_products-menu_sales-title">Скидки 50%</h3>
+              <img src="img/icon-4.svg" width="59" height="72" alt="Скидки 50%">
+              <a class="main_products-menu_button" href="sales.html" title="Скидки 50%">На 350 товаров</a>
+          </div>
+          <div class="main_products-menu_delivery">
+              <h3 class="main_products-menu_delivery-title">Доставка</h3>
+              <img src="img/icon-5.svg" width="78" height="63" alt="Доставка">
+              <a class="main_products-menu_button" href="delivery.html" title="Доставка">Бесплатно</a>
+          </div>
+          <div class="main_products-menu_slider">
+              <div>
+                  <h3 class="main_products-menu_slider-title">Дрели</h3>
+                  <p class="main_products-menu_slider-description">Соседям на радость!</p>
+                  <img src="img/drill.jpg" width="620" height="266" alt="Дрели">
+              </div>
+              <div>
+                  <h3 class="main_products-menu_slider-title">Перфораторы</h3>
+                  <p class="main_products-menu_slider-description">Настоящие мужские игрушки</p>
+                  <img src="img/perforator.jpg" width="620" height="266" alt="Перфораторы">
+              </div>
+          </div>
+      </div>
+
+      <section class="main_popular-products">
+        <div class="main-popular-top">
+          <h2 class="main-popular-title">Популярные товары:</h2>
+          <a class="popular-button" href="#" title="">Все популярные товары</a>
+        </div>
+        <ul class="main_popular-products-list">
+            <li class="catalog-item">
+                <p class="catalog-item-title">
+                     <a href="catalog-item.html" title="Перфоратор BOSCH BFG 9000">Перфоратор BOSCH BFG 9000</a>
+                </p>
+                <p class="catalog-item-image">
+                     <a href="catalog-item.html">
+                        <img src="img/product-3.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 9000">
+                    </a>
+                </p>
+                <p class="catalog-item-old-price">32500 P.</p>
+                <p class="catalog-item-new-price">
+                    <a href="catalog-item.html" title="25500 P.">25500 P.</a>
+                </p>
+                <div class="catalog-user-form-hidden">
+                    <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                    <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+                </div>
+            </li>
+            <li class="catalog-item">
+                <p class="catalog-item-title">
+                     <a href="catalog-item.html" title="Перфоратор BOSCH BFG 3000">Перфоратор BOSCH BFG 3000</a>
+                </p>
+                <p class="catalog-item-image">
+                     <a href="catalog-item.html">
+                        <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 3000">
+                    </a>
+                </p>
+                <p class="catalog-item-old-price">22500 P.</p>
+                <p class="catalog-item-new-price">
+                    <a href="catalog-item.html" title="15500 P.">15500 P.</a>
+                </p>
+                <div class="catalog-user-form-hidden">
+                    <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                    <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+                </div>
+            </li>
+            <li class="catalog-item">
+                <p class="catalog-item-title">
+                    <a href="catalog-item.html" title="Перфоратор BOSCH BFG 6000">Перфоратор BOSCH BFG 6000</a>
+                </p>
+                <p class="catalog-item-image">
+                    <a href="catalog-item.html">
+                    <img src="img/product-2.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 6000">
+                </a></p>
+                <p class="catalog-item-old-price">30500 P.</p>
+                <p class="catalog-item-new-price">
+                    <a href="catalog-item.html" title="25500 P.">25500 P.</a>
+                </p>
+                <div class="catalog-user-form-hidden">
+                    <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                    <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+                </div>
+            </li>
+            <li class="catalog-item">
+                <p class="catalog-item-title">
+                    <a href="catalog-item.html" title="Перфоратор BOSCH BFG 2000">Перфоратор BOSCH BFG 2000</a>
+                </p>
+                <p class="catalog-item-image">
+                    <a href="catalog-item.html">
+                        <img src="img/product-1.jpg" width="220" height="165" alt="Перфоратор BOSCH BFG 2000">
+                    </a>
+                </p>
+                <p class="catalog-item-new-price">
+                    <a href="catalog-item.html" title="12500 P.">12500 P.</a>
+                </p>
+                <div class="catalog-user-form-hidden">
+                    <a class="catalog-user-form-button" href="#" title="Купить">Купить</a>
+                    <a class="catalog-user-form-button" href="#" title="В закладки">В закладки</a>
+                </div>
+                <img src="img/new-flag.svg" class="new-flag" width="20" height="20" alt="Новый товар">
+            </li>
+        </ul>
+      </section>
+
+      <section class="main_popular-brands">
+        <div class="main-popular-top">
+          <h2 class="main-popular-title">Популярные производители:</h2>
+          <a class="popular-button" href="#" title="Все производители">Все производители</a>
+        </div>
+        <ul class="main_popular-brands-list">
+            <li class="brands-item">
+                <a href="#" title="Bosch">
+                    <img src="img/bosch.jpg" width="126" height="37" alt="Bosch">
+                </a>
+            </li>
+            <li class="brands-item">
+                <a href="#" title="Makita">
+                    <img src="img/makita.jpg" width="123" height="40" alt="Makita">
+                </a>
+            </li>
+            <li class="brands-item">
+                <a href="#" title="De-walt">
+                    <img src="img/de-walt.jpg" width="146" height="44" alt="De-walt">
+                </a>
+            </li>
+            <li class="brands-item">
+                <a href="#" title="Интерскол">
+                    <img src="img/interskol.jpg" width="200" height="88" alt="Интерскол">
+                </a>
+            </li>
+            <li class="brands-item">
+                <a href="#" title="Hitachi">
+                    <img src="img/hitachi.jpg" width="169" height="31" alt="Hitachi">
+                </a>
+            </li>
+            <li class="brands-item">
+                <a href="#" title="LG">
+                    <img src="img/lg.jpg" width="121" height="73" alt="LG">
+                </a>
+            </li>
+            <li class="brands-item">
+                <a href="#" title="AEG">
+                    <img src="img/aeg.jpg" width="151" height="96" alt="AEG">
+                </a>
+            </li>
+            <li class="brands-item">
+                <a href="#" title="Metabo">
+                    <img src="img/metabo.jpg" width="204" height="69" alt="Metabo">
+                </a>
+            </li>
+        </ul>
+      </section>
+
+      <section class="main_service">
+          <h2 class="main_service-title">Сервисы</h2>
+          <p class="main_service-description">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
+          <ul class="main_service-list">
+                <li class="main_service-list-item">
+                    <a class="service-list-button" href="#" title="Доставка">Доставка</a>
+                </li>
+                <li class="main_service-list-item">
+                    <a class="service-list-button" href="#" title="Гарантия">Гарантия</a>
+                </li>
+                <li class="main_service-list-item">
+                    <a class="service-list-button" href="#" title="Кредит">Кредит</a>
+                </li>
+          </ul>
+      </section>
+
       <section class="main_information">
     	  <div class="main-about-us">
     		  <h2 class="main_information-title">Компания «Техномарт»</h2>
@@ -117,7 +302,7 @@
                 <a href="materials.html" title="Материалы">Материалы</a>
             </li>
             <li>
-                <a href="technics.html" title="Техника">Техника</a>
+                <a href="machinery.html" title="Техника">Техника</a>
             </li>
             <li>
                 <a href="tools.html" title="Инструмент">Инструмент</a>
@@ -146,7 +331,7 @@
             <a class="footer-bottom_academy-link" href="send-mail.html" title="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </div>
         <div class="footer-bottom_academy">Разработано: 
-            <a class="footer-bottom_academy-link" href="https://htmlacademy.ru" title="htmlacademy.ru">htmlacademy.ru</a>
+            <a class="footer-bottom_academy-link" href="https://htmlacademy.ru" title="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </div>
       </div>
     </footer>
